# Forecasting-APP

./: README.md  pyproject.toml
database/: original_data.csv  smooth_data.csv
models/: Camp.onnx  camp_model.pkl  pca_model.pkl
streamlit-app/app/: del.py  del1.py  main.py
streamlit_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
