[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-app"
version = "0.1.0"
description = "A Streamlit application for Forecasting"
authors = [{ name = "Vignesh", email = "vigneshirtt@alumni.iitm.ac.in" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit==1.42.0",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "matplotlib==3.10.0",
    "duckdb==1.2.0",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "scikit-learn==1.2.2",
]

[tool.setuptools]
packages = ["streamlit-app"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]


